projectv02/manifests/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projectv02-svc
spec:
  type: NodePort
  selector:
    app: projectv02
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 3700
      targetPort: 3000
