projectv02/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projectv02-svc
spec:
  type: ClusterIP
  selector:
    app: projectv02
  ports:
    - port: 3700
      protocol: TCP
      targetPort: 3000
